--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
