--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
+    "styled-components": "^5.3.10",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react": "18.0.38"
+    "@types/react": "18.0.38",
+    "@types/styled-components": "^5.1.26"
   }
 }
